--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>👑 Manvi Singh </title>
+    <title> 👑 Manvi Singh </title>
     <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
-    <h1>Web Site is under consturction, comeback for cool stuff... </h1>
+    <h1>Web Site is under consturction, comeback for cool stuff... for now you can checkout my IG below. </h1>
 
     <a href="https://www.instagram.com/manvisingh3097/">
         <img alt="ig_logo" src="images/ig_logo.png" width=150" height="70">
